<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Learning Companion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="learningProgress">Learning Progress</string>
    <string name="library">Library</string>
    <string name="addCourse">Add Course</string>
    <string name="account">Account</string>
    <string name="targetMinutesPerWeek">Target per week (minute)</string>
    <string name="courseName">Course Name</string>
    <string name="save">Save</string>
    <string name="targetTimeWords">Your target learning time per week:</string>
    <string name="totalTimeWords">Your total learning time this week:</string>
    <string name="progressTimeWords">Your progress:</string>
    <string name="startStudy">START LEARNING</string>
    <string name="saveProgress">Save Progress</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>
    <string name="stopwatchInitial">00:00:00</string>
    <string name="bookTitle">Book Title</string>
    <string name="titleText">Title</string>
    <string name="profilePicture">Profile Picture</string>
    <string name="author">Author</string>
    <string name="quote">Quote</string>
    <string name="courseCantBeUpdated">Course cannot be updated</string>
    <string name="courseSaved">Course saved</string>
    <string name="courseNotSaved">Course not saved</string>
    <string name="courseProgressUpdated">Course progress updated</string>
    <string name="downloadCompleted">Download completed: </string>
    <string name="tapToOpenFile">Tap to open file</string>
    <string name="downloadFailed">Download failed</string>
    <string name="downloadStarting">Download is starting...</string>
    <string name="fillAllField">Please fill all the field</string>
    <string name="permissionTitle">App\'s Permission</string>
    <string name="permissionSubtitle">Why we need these permissions?</string>
    <string name="internetTitle">Internet</string>
    <string name="internetDesc">Allows the application to use the device\'s internet. This permission is used to download e-book files.</string>
    <string name="externalStorageTitle">External Storage</string>
    <string name="externalStorageDesc">Allows the application to read and write to the device\'s external storage. This permission is used to save e-book files and access photos to change your profile photo.</string>
    <string name="cameraTitle">Camera</string>
    <string name="cameraDesc">Allow application to use the device\'s camera. This permission is used to take your profile photo.</string>
    <string name="permissionGrantedAccount">Permission Granted. Now you can change profile picture.</string>
    <string name="permissionLibraryDetail">Permission Granted. Now you can download e-book.</string>
    <string name="noInternetTitle">No Internet Connection</string>
    <string name="noInternetSubtitle">You can not download files. Please check your internet connection. Pull down to reload.</string>
</resources>