<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permissionSubtitle"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/internetTitle"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorAccent"
            android:textAlignment="center" />

        <ImageView
            android:id="@+id/imageView1"
            android:contentDescription="@string/internetTitle"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:scaleType="centerInside"
            android:layout_gravity="center"
            android:src="@drawable/permission_internet" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/internetDesc"
            android:layout_marginTop="5dp"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cameraTitle"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorAccent"
            android:textAlignment="center" />

        <ImageView
            android:id="@+id/imageView2"
            android:contentDescription="@string/cameraTitle"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:scaleType="centerInside"
            android:layout_gravity="center"
            android:src="@drawable/permission_camera" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cameraDesc"
            android:layout_marginTop="5dp"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/externalStorageTitle"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorAccent"
            android:textAlignment="center" />

        <ImageView
            android:id="@+id/imageView3"
            android:contentDescription="@string/externalStorageTitle"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:scaleType="centerInside"
            android:layout_gravity="center"
            android:src="@drawable/permission_external_storage" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/externalStorageDesc"
            android:layout_marginTop="5dp"
            android:textAlignment="center" />

    </LinearLayout>

</ScrollView>